colocando los iconos en las opciones ( •_•)>⌐■-■

--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
         <ul>
             <li class="list active" style="--clr: #f44336;">
                 <a href="#">
-                    <span class="icon"><ion- name="home-outline"></ion-></span>
+                    <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
                     <span class="text">Home</span>
                 </a>    
             </li>
             <li class="list" style="--clr: #ffa117;">
                 <a href="#">
-                    <span class="icon"><ion- name="person-outline"></ion-></span>
+                    <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
                     <span class="text">About</span>
                 </a>
             </li>
             <li class="list" style="--clr: #0fc70f;">
-                <a href="#">
-                    <span class="icon"><ion- name="chatbubble-outline"></ion-></span>
+                <a href="">
+                    <span class="icon"><ion-icon name="chatbubbles-outline"></ion-icon></span>
                     <span class="text">Messages</span>
                 </a>
             </li>
             <li class="list" style="--clr: #2196f3;">
-                <a href="#">
-                    <span class="icon"><ion- name="camera-outline"></ion-></span>
+                <a href="">
+                    <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
                     <span class="text">Photos</span>
                 </a>
             </li>
             <li class="list" style="--clr: #b145e9;">
                 <a href="#">
-                    <span class="icon"><ion- name="settings-outline"></ion-></span>
+                    <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
                     <span class="text">Settings</span>
                 </a>
             </li>
@@ -45,8 +45,8 @@
         
     </div>
 
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
