--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div class="navegation">
+    <div class="navigation">
         <div class="menuToggle"></div>
         <ul>
             <li class="list active" style="--clr: #f44336;">
@@ -24,13 +24,13 @@
                 </a>
             </li>
             <li class="list" style="--clr: #0fc70f;">
-                <a href="">
+                <a href="#">
                     <span class="icon"><ion-icon name="chatbubbles-outline"></ion-icon></span>
                     <span class="text">Messages</span>
                 </a>
             </li>
             <li class="list" style="--clr: #2196f3;">
-                <a href="">
+                <a href="#">
                     <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
                     <span class="text">Photos</span>
                 </a>
